minor style edits

--- a/index.ipynb
+++ b/index.ipynb
@@ -1,13 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Data Science Ethics - Sensitive Features Case Study\n",
     "\n",
     "## Introduction\n",
-    "In the previous lesson, we discussed the Boston Housing data set and some of the problems inherent to it. In this lab, we are going to explore the nitty-gritty about why the Boston Housing data set is so problematic so you can spot __sensitive features__ and handle them accordingly. We will also touch on __data integrity issues__, a topic that we will explore in further detail in future lessons. \n",
+    "In this lab, you will explore the nitty-gritty about why the Boston Housing data set is so problematic so you can spot __sensitive features__ and handle them accordingly. You will also touch on __data integrity issues__, a topic that we will explore in further detail in future lessons. \n",
     "\n",
     "## Learning Objectives\n",
     "You will be able to:\n",
@@ -19,11 +20,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Load the Boston Housing Data Set\n",
-    "Due to the issues we will discuss in this lab, the Boston Housing Data set is no longer available in Seaborn as a sample data set. However, you can still access this data set on GitHub. Run the code cells below to import the Boston Housing data set from GitHub."
+    "Due to the issues you will learn in this lab, the Boston Housing Data set is no longer available in Seaborn as a sample data set. However, you can still access this data set on GitHub. Run the code cells below to import the Boston Housing data set from GitHub."
    ]
   },
   {
@@ -311,6 +313,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -329,7 +332,7 @@
     "The intentions of the designers of the study was to control for factors that might influence the price of a home to isolate for their target of clean air. **However, by including a measurement of the concentration of *exclusively black people* it implicitly suggests that the *presence of black people and not racism* is what negatively impacts home values.\n",
     "\n",
     "#### Discriminatory Proxies\n",
-    "While using race as a proxy *can* have a benefit in the proper context. For example, if we wanted to improve equity in education, it might be helpful to understand the relationship between different racial populations and quality of the education offered in their area. However, without proper context, some features can be interpreted in discriminatory or harmful ways. \n",
+    "While using race as a proxy *can* have a benefit in the proper context. For example, if you wanted to improve equity in education, it might be helpful to understand the relationship between different racial populations and quality of the education offered in their area. However, without proper context, some features can be interpreted in discriminatory or harmful ways. \n",
     "\n",
     "### Statistical Issues\n",
     "In addition to the harmful implications of the manner "
